deployment/kustomize/environments/tst/patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangofluent
spec:
  template:
    spec:
      containers:
        - name: uwsgi
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100

      priorityClassName: tst-apps

      # Speed up, remove DNS dependencies
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      hostAliases:
        - hostnames: ["pgbouncer-apps.infra"]
          ip: 10.112.2.12
        - hostnames: ["postgres-apps.infra"]
          ip: 10.112.0.102
        - hostnames: ["redis-master.infra"]
          ip: 10.112.12.219
